--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -69,13 +69,17 @@
             android:textSize="@dimen/font_16" />
 
     </FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0_5"
+        android:background="@color/color_EEE" />
     <FrameLayout
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_clear_cache"
+            android:id="@+id/tv_yonghu"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:drawableEnd="@mipmap/next_right"
@@ -89,7 +93,6 @@
             tools:targetApi="m" />
 
         <TextView
-            android:id="@+id/tv_cache_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
@@ -99,13 +102,17 @@
             android:textSize="@dimen/font_16" />
 
     </FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0_5"
+        android:background="@color/color_EEE" />
     <FrameLayout
         android:layout_width="match_parent"
         android:background="@color/white"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_clear_cache"
+            android:id="@+id/tv_yinsi"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:drawableEnd="@mipmap/next_right"
@@ -119,7 +126,6 @@
             tools:targetApi="m" />
 
         <TextView
-            android:id="@+id/tv_cache_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
@@ -129,6 +135,10 @@
             android:textSize="@dimen/font_16" />
 
     </FrameLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_0_5"
+        android:background="@color/color_EEE" />
     <FrameLayout
         android:layout_width="match_parent"
         android:background="@color/white"
@@ -136,7 +146,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_clear_cache"
+            android:id="@+id/tv_tebie"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
             android:drawableEnd="@mipmap/next_right"
@@ -150,12 +160,10 @@
             tools:targetApi="m" />
 
         <TextView
-            android:id="@+id/tv_cache_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
             android:layout_marginEnd="@dimen/dp_40"
-            android:text="20kb"
             android:textColor="@color/color_333"
             android:textSize="@dimen/font_16" />
 
@@ -206,25 +214,7 @@
         android:layout_height="@dimen/dp_0_5"
         android:background="@color/color_EEE" />
 
-    <TextView
-        android:id="@+id/tv_des"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50"
-        android:drawableEnd="@mipmap/next_right"
-        android:background="@color/white"
-        android:drawableTint="@color/colorCCCCCC"
-        android:gravity="center_vertical"
-        android:paddingStart="@dimen/len_32"
-        android:paddingEnd="@dimen/len_16"
-        android:text="隐私政策"
-        android:textColor="#4D4D4D"
-        android:textSize="13sp"
-        tools:targetApi="m" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_0_5"
-        android:background="@color/color_EEE" />
 
 
 
