--- a/app/src/main/res/layout/fragment_goodstab.xml
+++ b/app/src/main/res/layout/fragment_goodstab.xml
@@ -17,6 +17,8 @@
 <com.scwang.smartrefresh.layout.SmartRefreshLayout
     android:id="@+id/smallLabel"
     android:layout_width="match_parent"
+    android:layout_marginRight="10dp"
+    android:layout_marginLeft="10dp"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
