--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,8 +24,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
+
 
                 android:orientation="vertical">
                 <View
@@ -39,6 +38,7 @@
                     android:layout_height="32dp"
                     android:layout_marginTop="30dp"
 
+                    android:visibility="gone"
                     android:layout_weight="1"
                     android:background="@drawable/drawable_main_top_search"
                     android:orientation="horizontal"
@@ -60,16 +60,28 @@
 
                 </LinearLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:background="#EFEFEF"
+                    android:paddingBottom="10dp"
+                    android:layout_height="wrap_content">
+
+
                 <com.youth.banner.Banner
                     android:id="@+id/banner"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
+                    android:background="#EFEFEF"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:layout_marginTop="15dp" />
-
+                </RelativeLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -100,10 +112,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:background="#EFEFEF"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="10dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -142,12 +161,21 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_marginTop="15dp"
+                    android:visibility="gone"
                     android:background="@mipmap/banner_jiaonang"
                     android:layout_height="100dp"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:background="#EFEFEF"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_height="10dp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -180,10 +208,17 @@
                         android:layout_height="wrap_content"/>
 
                 </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:background="#EFEFEF"
+                    android:layout_marginTop="10dp"
 
+                    android:layout_height="10dp"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_home_list"
                     android:layout_marginTop="5dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
