--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -58,7 +58,7 @@
                             android:layout_width="64dp"
                             android:layout_height="64dp"
                             android:gravity="center_vertical"
-                            android:src="@mipmap/shouye_touxiang" />
+                            android:src="@drawable/touxianghui" />
 
                         <LinearLayout
                             android:id="@+id/tv_search"
@@ -233,7 +233,144 @@
 
 
                 </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginRight="12dp"
+                    android:orientation="vertical"
+                    android:background="@drawable/drawable_suggst_one"
+                    android:layout_marginTop="12dp"
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="7dp"
+                        android:orientation="vertical"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginRight="12dp"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="我的订单"
+                            android:textColor="#2B2B2B"
+                            android:textStyle="bold"
+                            android:layout_centerVertical="true"
+                            android:textSize="14sp"
+                            android:layout_height="wrap_content"/>
+                        <TextView
+                            android:id="@+id/txt_alloder"
+                            android:layout_width="wrap_content"
+                            android:text="查看全部订单"
+                            android:textStyle="bold"
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentRight="true"
+                            android:textColor="#2B2B2B"
+                            android:drawableRight="@mipmap/next_right"
+                            android:textSize="14sp"
+                            android:layout_height="wrap_content"/>
+                    </RelativeLayout>
+                    <LinearLayout
 
+                        android:layout_width="match_parent"
+                        android:layout_weight="1"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="7dp"
+                        android:orientation="horizontal"
+                        android:gravity="center_horizontal"
+                        android:layout_height="wrap_content">
+                        <LinearLayout
+
+                            android:id="@+id/linalloder"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="7dp"
+                            android:orientation="vertical"
+                            android:gravity="center_horizontal"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:layout_width="27dp"
+                                android:src="@drawable/wd_icon_qb"
+                                android:layout_height="27dp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:text="全部"
+                                android:layout_marginTop="3dp"
+                                android:textColor="#666666"
+                                android:textSize="12sp"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+
+                            android:id="@+id/linoderone"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="7dp"
+                            android:orientation="vertical"
+                            android:gravity="center_horizontal"
+                            android:layout_height="wrap_content">
+                        <ImageView
+                            android:layout_width="27dp"
+                            android:src="@drawable/alloder"
+                            android:layout_height="27dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:text="已结算"
+                            android:layout_marginTop="3dp"
+                            android:textColor="#666666"
+                            android:textSize="12sp"
+                            android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/linodertwo"
+
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="7dp"
+                            android:orientation="vertical"
+                            android:gravity="center_horizontal"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:layout_width="27dp"
+                                android:src="@drawable/wd_icon_yfk"
+                                android:layout_height="27dp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:text="已付款"
+                                android:layout_marginTop="3dp"
+                                android:textColor="#666666"
+                                android:textSize="12sp"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/linoderthree"
+
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="7dp"
+                            android:orientation="vertical"
+                            android:gravity="center_horizontal"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:layout_width="27dp"
+                                android:src="@drawable/wd_icon_ysx"
+                                android:layout_height="27dp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:text="已失效"
+                                android:layout_marginTop="3dp"
+                                android:textColor="#666666"
+                                android:textSize="12sp"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
