--- a/app/src/main/res/layout/item_home_ren.xml
+++ b/app/src/main/res/layout/item_home_ren.xml
@@ -10,14 +10,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:background="@color/white"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/img_mainpic"
-            android:layout_width="90dp"
-            android:layout_height="110dp"
-            android:layout_centerHorizontal="true"
-            android:scaleType="fitXY" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/img_mainpic"
+                android:layout_width="90dp"
+                android:layout_height="110dp"
+                android:layout_centerHorizontal="true"
+                android:scaleType="fitXY" />
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="20dp"
+
+                android:background="@drawable/baoyou"
+                android:scaleType="centerCrop" />
+        </RelativeLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
