--- a/app/src/main/res/layout/item_videoview.xml
+++ b/app/src/main/res/layout/item_videoview.xml
@@ -2,79 +2,100 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
-    <net.goutalk.fowit.wigde.JzvdStdAutoCompleteAfterFullscreen
-        android:id="@+id/videoplayer"
+    <LinearLayout
+        android:id="@+id/lingoods"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
 
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/img_head_video"
-            android:layout_width="32dp"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/shouye_touxiang"
-            android:layout_height="32dp"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="6dp"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/img_head_video"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="天山"
-                android:textColor="#4D4D4D"
-                android:textSize="14sp"
-                android:layout_height="wrap_content"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="关注"
-                android:paddingLeft="9dp"
-                android:paddingRight="9dp"
-                android:layout_marginLeft="20dp"
-                android:layout_centerVertical="true"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:background="@drawable/drawable_video_text"
-                android:layout_alignParentRight="true"
-                android:textColor="#FF7903"
-                android:textSize="12sp"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_height="wrap_content">
+        <net.goutalk.fowit.wigde.JzvdStdAutoCompleteAfterFullscreen
+            android:id="@+id/videoplayer"
+            android:layout_width="match_parent"
+            android:layout_height="200dp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="15dp"
+
+            android:paddingRight="15dp">
+
             <ImageView
-                android:id="@+id/img_share"
-                android:layout_width="20dp"
-
-                android:background="@mipmap/icon_sp_zf"
-                android:layout_height="20dp"/>
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_marginLeft="20dp"
+                android:id="@+id/img_head_video"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
                 android:layout_centerVertical="true"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:background="@mipmap/icon_sp_xh"
+                android:src="@mipmap/shouye_touxiang" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="6dp"
+                android:layout_toRightOf="@+id/img_head_video"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="天山"
+                    android:textColor="#4D4D4D"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/drawable_video_text"
+                    android:paddingLeft="9dp"
+                    android:paddingTop="2dp"
+                    android:paddingRight="9dp"
+                    android:paddingBottom="2dp"
+                    android:text="关注"
+                    android:textColor="#FF7903"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_height="20dp"/>
-        </LinearLayout>
-    </RelativeLayout>
+                android:layout_centerVertical="true"
+                android:orientation="horizontal">
 
+                <ImageView
+                    android:id="@+id/img_share"
+                    android:layout_width="20dp"
 
+                    android:layout_height="20dp"
+                    android:background="@mipmap/icon_sp_zf" />
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:background="@mipmap/icon_sp_xh"
+
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp" />
+            </LinearLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/banner_container"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="150dp"
+        android:visibility="gone"
+        android:background="#ffffff" />
 </LinearLayout>
