--- a/app/src/main/res/layout/item_zreo_layout.xml
+++ b/app/src/main/res/layout/item_zreo_layout.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:id="@+id/lingoods"
+
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:layout_height="wrap_content">
+
 
     <ImageView
         android:id="@+id/img"
@@ -115,5 +124,12 @@
 
 
     </LinearLayout>
-
+    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/banner_container"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="150dp"
+        android:visibility="gone"
+        android:background="#ffffff" />
 </LinearLayout>
