--- a/app/src/main/res/layout/layout_userinfo.xml
+++ b/app/src/main/res/layout/layout_userinfo.xml
@@ -50,7 +50,7 @@
                 android:id="@+id/img_head_info"
                 android:layout_width="100dp"
                 android:layout_gravity="bottom|center_horizontal"
-                android:background="@mipmap/bjzl_touxiang"
+                android:background="@drawable/touxianghui"
                 android:layout_height="100dp"/>
         </LinearLayout>
         <FrameLayout
@@ -77,7 +77,7 @@
             <TextView
                 android:id="@+id/tv_user_name"
                 android:layout_gravity="center_vertical|end"
-                android:text="哈哈哈"
+                android:text="请编辑"
                 android:textSize="12sp"
                 android:drawableEnd="@mipmap/next_right"
                 android:gravity="center_vertical"
@@ -110,7 +110,7 @@
             <TextView
                 android:id="@+id/tv_user_sex"
                 android:layout_gravity="center_vertical|end"
-                tools:text="男"
+                android:text="男"
                 android:textSize="12sp"
                 android:drawableEnd="@mipmap/next_right"
                 android:gravity="center_vertical"
@@ -211,7 +211,7 @@
             <TextView
                 android:id="@+id/tv_user_email"
                 android:layout_gravity="center_vertical|end"
-                tools:text="124208627@qq.com"
+                android:text="请绑定"
                 android:textSize="12sp"
                 android:drawableEnd="@mipmap/next_right"
                 android:gravity="center_vertical"
@@ -244,7 +244,7 @@
             <TextView
                 android:id="@+id/tv_user_wechat"
                 android:layout_gravity="center_vertical|end"
-                tools:text="124208627@qq.com"
+                android:text="请绑定"
                 android:textSize="12sp"
                 android:drawableEnd="@mipmap/next_right"
                 android:gravity="center_vertical"
@@ -277,7 +277,7 @@
             <TextView
                 android:id="@+id/tv_user_alip"
                 android:layout_gravity="center_vertical|end"
-                tools:text="124208627@qq.com"
+                android:text="请绑定"
                 android:textSize="12sp"
                 android:drawableEnd="@mipmap/next_right"
                 android:gravity="center_vertical"
