--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths >
-    <external-path path="Android/data/net.goutalk.fowit/" name="files_root" />
-    <external-path path="." name="external_storage_root" />
+    <paths>
+        <external-path
+            name="camera_photos"
+            path="" />
+    </paths>
 
 </paths>
